--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@
 .navbar {
     background-color: #333;
     display: flex;
-    justify-content: space-around; /* Distribute space evenly */
-    align-items: center; /* Vertically center items */
-    padding: 14px 0; /* Add padding on top and bottom */
+    justify-content: space-around; 
+    align-items: center; 
+    padding: 14px 0;
     overflow: hidden;
 }
 
