--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 .header1 {
     font-size: 10em;
-    
+    text-align: center;
+    color:#f2f2f2;
+    animation: fadeIn 5s;
 }
 
 
 .highlight {
     animation: colorChange 2s forwards; 
+}
+
+
+.donate {
+    
+    font-size: larger;
+   
 }
 
 
@@ -19,12 +28,21 @@
 }
 
 .navbar {
-    background-color: #333;
+    background-color: black;
     display: flex;
+    justify-content: space-around;
+    align-items: center; 
+    padding: 14px 0;
     justify-content: space-around; 
     align-items: center; 
     padding: 14px 0;
     overflow: hidden;
+}
+
+body {
+    background-color: #333;
+    background-size: 100%;
+ 
 }
 
 
@@ -37,3 +55,43 @@
     padding: 14px 20px;
     text-decoration: none;
 }
+
+.bio {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color:white;
+    font-size: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto; 
+  letter-spacing: .15em; 
+  animation: typing 3.5s steps(30, end), blink-caret 3s step-end infinite;
+  transition: color .5s ease-in-out, font-size .5s ease-in-out;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 50% }
+  }
+  
+  
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    60% { border-color: orange; }
+  }
+
+  .bio:hover {
+    color: gainsboro;
+    transition: .5s ease-in-out;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+
+
