--- a/style.css
+++ b/style.css
@@ -7,12 +7,20 @@
 
 
 .highlight {
-    animation: colorChange 2s forwards; 
+    animation: colorChange 3s forwards; 
 }
 
+.highlight2 {
+    animation: colorChange2 1s forwards;
+}
+
+.highlight3 {
+    animation: colorChange3 5s forwards;
+}
 
 .donate {
     
+    text-align: center;
     font-size: larger;
    
 }
@@ -27,6 +35,26 @@
     }
 }
 
+
+
+@keyframes colorChange2 {
+    from {
+        color: inherit; 
+    }
+    to {
+        color: #FEDD00; 
+    }
+}
+
+
+@keyframes colorChange3 {
+    from {
+        color: inherit; 
+    }
+    to {
+        color: #009A44; 
+    }
+}
 .navbar {
     background-color: black;
     display: flex;
@@ -90,8 +118,39 @@ a {
   .bio:hover {
     color: gainsboro;
     transition: .5s ease-in-out;
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 1.25em;
   }
 
 
+.whatnino {
+    overflow: hidden;
+    margin-top: 50px;
+    margin-left: 50px;
+    animation: typing 3.5s steps(30, end), blink-caret 3s step-end infinite;
+    transition: color .5s ease-in-out, font-size .5s ease-in-out;
+    letter-spacing: .15em; 
+    white-space: nowrap;
+    margin: auto; 
+   color: white;
+}
+
+.whatninotxt {
+    color: black;
+    
+    background: lightyellow;
+    border: 1px solid yellow;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+.bubble1 {
+    
+    display: block;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.omega {
+    font-family: 'raleway';
+}
