--- a/style.css
+++ b/style.css
@@ -66,6 +66,15 @@
     padding: 14px 0;
     overflow: hidden;
 }
+.navhome {
+    transition: color .5s ease-in-out, font-size .5s ease-in-out;
+
+}
+.navhome:hover {
+    color: green;
+    transition: .5s ease-in-out;
+    font-size: 1.25em;
+  }
 
 body {
     background-color: #333;
@@ -154,3 +163,44 @@ a {
 .omega {
     font-family: 'raleway';
 }
+
+
+
+
+
+.button-31 {
+  background-color: green;
+  border-radius: 4px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 70;
+  line-height: 1.5;
+  margin: 0;
+  max-width: none;
+  min-height: 44px;
+  min-width: 10px;
+  outline: none;
+  overflow: hidden;
+  padding: 9px 20px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+}
+
+.button-31:hover,
+.button-31:focus {
+  opacity: .75;
+}
+
+
+
+
